--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,3 +1,41 @@
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+.pieDePagina {
+  background-image: linear-gradient( to bottom, rgba(255, 255, 255, 0), rgba(242, 241, 254, 1), rgba(221, 225, 254, 1), rgba(199, 212, 255, 1), rgba(173, 201, 255, 1) );
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+/*     height: 120px; */
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+
+}
+.pieDePagina hr {
+  width: 75%;
+  background-color: rgba(151, 151, 151, 1);
+  border: 1px solid rgba(151, 151, 151, 1);
+  margin-top: 15px;
+}
+
+.pieDePagina a {
+text-decoration: none;
+color: #2a7ae4;
+}
+
+.contenedor {
+ 
+  height: 100vh;
+  display: flex; /*  <-------------- required               */
+  flex-direction: column; /*  <-------------- required               */
+  justify-content: space-between; /*  <-------------- required               */
+}
+
+.a{
+  border: 1px solid rgb(0, 255, 64);
+}
+.b{
+  border: 1px solid rgb(255, 0, 0);
 }
