--- a/src/app/views/error.pug
+++ b/src/app/views/error.pug
@@ -1,9 +1,31 @@
 doctype html
-html(lang="en")
+html(lang="es")
     head
         meta(charset="UTF-8")
+        link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC", crossorigin="anonymous")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-    body 
-        h1= title
-        p Welcome to the hell
+        title Pagina No Encontrada
+        
+
+style.
+  .cartel {
+    background: #e6d4ca;
+    background: linear-gradient(135deg, #e6d4ca, #5abd82);
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+  }
+
+body.cartel 
+  div
+    h1.text-center.my-3 Error : #{error}
+    div
+        strong  mensaje : #{mensaje}
+
+
+    div.text-center.my-3
+      a.btn.btn-primary.btn-lg(href="javascript:history.back()") Volver
+
+
