--- a/src/app/views/layout.pug
+++ b/src/app/views/layout.pug
@@ -7,6 +7,8 @@ html(lang="es")
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC", crossorigin="anonymous")
 
         //link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css")
+        link(rel='icon', type='image/png', href='./images/favicon.ico')
+
 
         link(rel='stylesheet', href='/stylesheets/style.css')
         
@@ -15,50 +17,88 @@ html(lang="es")
 
         
         body
+            - if (typeof MensajeToast !== 'undefined' && MensajeToast.estado)
+                .toast.position-fixed.top-50.start-50.translate-middle.bg-light.toastStyle(role='alert', aria-live='assertive', aria-atomic='true')
+                        .toast-header.text-dark(class=`${MensajeToast.estilo}`)
+                            strong.me-auto=  MensajeToast.titulo
+                            button.btn-close(type='button', data-bs-dismiss='toast', aria-label='Close', aria-hidden='true')
+                        .toast-body
+                            x= MensajeToast.body
 
             .contenedor
                 .div
-                    nav.navbar.navbar-expand-lg.bg-dark.px-4                         
-                        a.navbar-brand(href='https://getbootstrap.com')
-                            img(src='https://getbootstrap.com/docs/5.1/assets/brand/bootstrap-logo.svg', width='30', height='24', alt='Bootstrap')
-                        button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarBasicExample', aria-controls='navbarBasicExample', aria-expanded='false', aria-label='Toggle navigation')
-                            span.navbar-toggler-icon
-                        #navbarBasicExample.navbar-collapse.collapse
-                            .navbar-nav
-                                a.nav-link(href="/home")
-                                    | Home
-                                a.nav-link(href='#')
-                                    | Documentation
-                                .nav-item.dropdown
-                                    a.nav-link.dropdown-toggle(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
-                                        | More
-                                    ul.dropdown-menu
-                                        a.dropdown-item(href='#')
-                                            | About
-                                        a.dropdown-item(href='#')
-                                            | Jobs
-                                        a.dropdown-item(href='#')
-                                            | Contact
-                                        hr.dropdown-divider
-                                        a.dropdown-item(href='#')
-                                            | Report an issue
-                            .navbar-nav.ms-auto
-                                .navbar-text
-                                    if usuarioLogeado
-                                        a.btn.btn-primary.mx-3(href="/GestionCuentas")
-                                            | #{usuarioLogeado}
-                                    else 
-                                        a.btn.btn-primary.mx-3(href="/Login")
-                                            | Iniciar Sesion
-                                    if usuarioLogeado
-                                        a.btn.btn-light(href="/CerrarSesion")
-                                            | Cerrar Sesion
+                    .div
+                        nav.navbar.navbar-expand-lg.bg-dark.px-4                         
+                            img.me-3(src='./images/android-chrome-192x192.png', width='50', height='40', alt='Bootstrap')
+                            button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarBasicExample', aria-controls='navbarBasicExample', aria-expanded='false', aria-label='Toggle navigation')
+                                span.navbar-toggler-icon
+                            #navbarBasicExample.navbar-collapse.collapse
+                                .navbar-nav
+                                    if !usuarioLogeado
+                                        a.nav-link(href="/home")
+                                            | Página principal
                                     else
-                                        a.btn.btn-light(href="/Registro")
-                                            | Registrar
+                                        .vr
+                                        .nav-item.dropdown
+                                            a.nav-link.dropdown-toggle(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
+                                                | Vacunas
+                                            ul.dropdown-menu.dropdown-menu-dark
+                                                a.dropdown-item(href="/GestionVacunas")
+                                                    | Gestion de vacunas
 
+                                        .vr
+                                        a.nav-link(href='/CentrosDeVacunacion')
+                                            | Centros de vacunacion
+                                        .nav-item.dropdown
+                                            a.nav-link.dropdown-toggle(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
+                                                | Depositos
+                                            ul.dropdown-menu.dropdown-menu-dark
+                                                a.dropdown-item(href='/DepositosNacionales')
+                                                    | Nacional
+                                                a.dropdown-item(href='DepositosProvinciales')
+                                                    | Provincial
+                                        .vr
+                                        .nav-item.dropdown
+                                            a.nav-link.dropdown-toggle(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
+                                                | Administracion de lotes
+                                            ul.dropdown-menu.dropdown-menu-dark
+                                                a.dropdown-item(href='GestionLotesProveedor')
+                                                    | Nacionales
+                                                a.dropdown-item(href='GestionLotesProvincial')
+                                                    | Provincial
+                                                a.dropdown-item(href='GestionLotesCentroDeVacunacion')
+                                                    | Centros de vacunacion
+                                        .vr
+                                        .nav-item.dropdown
+                                            a.nav-link.dropdown-toggle(href='#', role='button', data-bs-toggle='dropdown', aria-expanded='false')
+                                                | Informes
+                                            ul.dropdown-menu.dropdown-menu-dark
+                                                a.dropdown-item(href='informePersonasVacunadas')
+                                                    | Personas vacunadas
+                                                a.dropdown-item(href='InformeVacunasDescartadasLoteProveedor')
+                                                    | listado de lotes descartados
+                                                a.dropdown-item(href='InformeLoteProveedor')
+                                                    | listado de lotes proveedores                               
+                                .navbar-nav.ms-auto
+                                    .navbar-text
+                                        if usuarioLogeado
+                                            a.btn.btn-primary.mx-3(href="/GestionCuentas")
+                                                | #{usuarioLogeado}
+                                        else 
+                                            a.btn.btn-primary.mx-3(href="/Login")
+                                                | Iniciar Sesion
+                                        if usuarioLogeado
+                                            a.btn.btn-light(href="/CerrarSesion")
+                                                | Cerrar Sesion
+                                        else
+                                            a.btn.btn-light(href="/Registro")
+                                                | Registrar
+                    .div
+                        block contenido
 
-                    block contenido
+                            
+
+                    
 
                 .pieDePagina
                     hr
@@ -69,8 +109,8 @@ html(lang="es")
 
         script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js", integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p", crossorigin="anonymous")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js", integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF", crossorigin="anonymous")
-        
         script(src="https://kit.fontawesome.com/fc73908a79.js", crossorigin="anonymous")
+        script(src="./js/global.js")
         block scripts
         
 
