--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,6 +1,8 @@
 body {
   font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-weight: 500;
 }
+
 
 .pieDePagina {
   background-image: linear-gradient( to bottom, rgba(255, 255, 255, 0), rgba(242, 241, 254, 1), rgba(221, 225, 254, 1), rgba(199, 212, 255, 1), rgba(173, 201, 255, 1) );
@@ -38,4 +40,41 @@ color: #2a7ae4;
 }
 .b{
   border: 1px solid rgb(255, 0, 0);
+}
+
+.vr{
+  border: 1px solid rgb(170, 170, 170);
+}
+
+
+.oculto {
+  display: none;
+}
+
+
+.toast-header strong {
+
+  font-weight: bold;
+  font-size: 20px;
+
+}
+
+
+.toast-body * {
+
+  font-size: 18px;
+  font-weight:normal;
+
+
+}
+
+.shadows {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  border-radius: 25px;
+}
+
+
+.toastStyle{
+  border: 2px solid #000;
+  
 }
